Revamp backfill to deal with the target variable i.e. 'opening' tomorrow. add daily sentiment + stock price fetching notebook

--- a/notebooks/backfill.ipynb
+++ b/notebooks/backfill.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bdbff96f",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c703a7ad",
    "metadata": {},
    "outputs": [
@@ -24,9 +24,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-23 19:57:27,676 INFO: Initializing external client\n",
-      "2025-12-23 19:57:27,677 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-12-23 19:57:29,651 INFO: Python Engine initialized.\n",
+      "2025-12-24 11:55:47,885 INFO: Initializing external client\n",
+      "2025-12-24 11:55:47,886 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-12-24 11:55:49,606 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1267871\n",
       "Successfully connected to Feature Store: a1id2223_featurestore\n",
@@ -42,7 +42,7 @@
     "\n",
     "# 2. Get the Feature Store (This triggers the metadata check)\n",
     "try:\n",
-    "    fs = project.get_feature_store(os.getenv(\"FEATURE_STORE_NAME\"))\n",
+    "    fs = project.get_feature_store(\"A1ID2223\")\n",
     "    print(f\"Successfully connected to Feature Store: {fs.name}\")\n",
     "except Exception as e:\n",
     "    print(f\"Feature Store Connection Error: {e}\")\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2eebc363",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9e59c3b4",
    "metadata": {},
    "outputs": [
@@ -107,40 +107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "94019253",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DatetimeIndex(['2016-02-19 00:00:00-05:00', '2016-02-22 00:00:00-05:00',\n",
-      "               '2016-02-23 00:00:00-05:00', '2016-02-24 00:00:00-05:00',\n",
-      "               '2016-02-25 00:00:00-05:00', '2016-02-26 00:00:00-05:00',\n",
-      "               '2016-02-29 00:00:00-05:00', '2016-03-01 00:00:00-05:00',\n",
-      "               '2016-03-02 00:00:00-05:00', '2016-03-03 00:00:00-05:00',\n",
-      "               ...\n",
-      "               '2024-11-13 00:00:00-05:00', '2024-11-14 00:00:00-05:00',\n",
-      "               '2024-11-15 00:00:00-05:00', '2024-11-18 00:00:00-05:00',\n",
-      "               '2024-11-19 00:00:00-05:00', '2024-11-20 00:00:00-05:00',\n",
-      "               '2024-11-21 00:00:00-05:00', '2024-11-22 00:00:00-05:00',\n",
-      "               '2024-11-25 00:00:00-05:00', '2024-11-26 00:00:00-05:00'],\n",
-      "              dtype='datetime64[ns, America/New_York]', name='Date', length=2209, freq=None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stock_data = yf.Ticker(\"AAPL\") \n",
+    "\n",
+    "# for news in stock_data.news:\n",
+    "#     print(news['content']['summary'])\n",
+    "\n",
     "stock_data_price_history = stock_data.history(period=\"10y\") # Get 10 yr price history\n",
-    "stock_data_clean = stock_data_price_history[['Open', 'High', 'Low', 'Close', 'Volume']]\n",
+    "stock_data_clean = stock_data_price_history[['Open']] # 'High', 'Low', 'Close', 'Volume', 'Open'\n",
     "stock_data_clean = stock_data_clean[from_date:to_date]\n",
-    "print(stock_data_clean.index)"
+    "\n",
+    "# Create next-day target from today's open\n",
+    "stock_data_clean[\"target_open\"] = stock_data_clean[\"Open\"].shift(-1)\n",
+    "# Drop last row without a next-day target\n",
+    "stock_data_clean = stock_data_clean.dropna(subset=[\"target_open\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cddccecf",
    "metadata": {},
    "outputs": [
@@ -154,12 +143,12 @@
       "               '2016-02-29 05:00:00', '2016-03-01 05:00:00',\n",
       "               '2016-03-02 05:00:00', '2016-03-03 05:00:00',\n",
       "               ...\n",
-      "               '2024-11-13 05:00:00', '2024-11-14 05:00:00',\n",
-      "               '2024-11-15 05:00:00', '2024-11-18 05:00:00',\n",
-      "               '2024-11-19 05:00:00', '2024-11-20 05:00:00',\n",
-      "               '2024-11-21 05:00:00', '2024-11-22 05:00:00',\n",
-      "               '2024-11-25 05:00:00', '2024-11-26 05:00:00'],\n",
-      "              dtype='datetime64[ns]', name='Date', length=2209, freq=None)\n"
+      "               '2024-11-12 05:00:00', '2024-11-13 05:00:00',\n",
+      "               '2024-11-14 05:00:00', '2024-11-15 05:00:00',\n",
+      "               '2024-11-18 05:00:00', '2024-11-19 05:00:00',\n",
+      "               '2024-11-20 05:00:00', '2024-11-21 05:00:00',\n",
+      "               '2024-11-22 05:00:00', '2024-11-25 05:00:00'],\n",
+      "              dtype='datetime64[ns]', name='Date', length=2208, freq=None)\n"
      ]
     }
    ],
@@ -171,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "37cc91d1",
    "metadata": {},
    "outputs": [
@@ -195,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "32c6888a",
    "metadata": {},
    "outputs": [
@@ -232,69 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "66824c7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "date                  2016-02-19 00:00:00\n",
-      "open                             21.76247\n",
-      "high                            21.934757\n",
-      "low                             21.717132\n",
-      "close                           21.771538\n",
-      "volume                          141496800\n",
-      "sentiment_polarity                  0.994\n",
-      "sentiment_neg                       0.023\n",
-      "sentiment_neu                       0.869\n",
-      "sentiment_pos                       0.108\n",
-      "Name: 0, dtype: object\n",
-      "Merged data shape: (1132, 10)\n",
-      "Columns: ['date', 'open', 'high', 'low', 'close', 'volume', 'sentiment_polarity', 'sentiment_neg', 'sentiment_neu', 'sentiment_pos']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Merge on the date index\n",
-    "merged_data = stock_data_clean.join(sentiment_daily, how='inner')\n",
-    "\n",
-    "# Reset index to convert date from index to column\n",
-    "merged_data = merged_data.reset_index()\n",
-    "\n",
-    "# Rename columns to lowercase to match feature group schema\n",
-    "merged_data.columns = merged_data.columns.str.lower()\n",
-    "\n",
-    "print(merged_data.iloc[0])\n",
-    "\n",
-    "\n",
-    "# Display the merged datamerged_data.size\n",
-    "print(f\"Merged data shape: {merged_data.shape}\")\n",
-    "print(f\"Columns: {merged_data.columns.tolist()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "9d880362",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the feature group for merged sentiment and stock price data\n",
-    "fg = fs.get_or_create_feature_group(\n",
-    "    name=\"stock_price_and_history\", \n",
-    "    description=\"joined stock price and sentiment history\",\n",
-    "    version = 1,\n",
-    "    primary_key = ['date'],\n",
-    "    event_time = 'date'\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f1863188",
+   "execution_count": 9,
+   "id": "b7dfe2e4",
    "metadata": {},
    "outputs": [
     {
@@ -302,85 +230,119 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1267871/fs/1262659/fg/1878362\n"
+      "https://c.app.hopsworks.ai:443/p/1267871/fs/1262659/fg/1876360\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 1132/1132 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 2208/2208 | Elapsed Time: 00:01 | Remaining Time: 00:00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching job: stock_price_and_history_1_offline_fg_materialization\n",
+      "Launching job: opening_prices_2_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/stock_price_and_history_1_offline_fg_materialization/executions\n",
-      "2025-12-22 14:34:19,184 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
-      "2025-12-22 14:34:22,364 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
-      "2025-12-22 14:36:16,965 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
-      "2025-12-22 14:36:17,135 INFO: Waiting for log aggregation to finish.\n",
-      "2025-12-22 14:36:42,601 INFO: Execution finished successfully.\n"
+      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/opening_prices_2_offline_fg_materialization/executions\n",
+      "2025-12-24 11:56:16,933 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
+      "2025-12-24 11:56:23,299 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-24 11:58:28,068 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-24 11:58:40,036 INFO: Execution finished successfully.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Job('stock_price_and_history_1_offline_fg_materialization', 'SPARK'), None)"
+       "(Job('opening_prices_2_offline_fg_materialization', 'SPARK'), None)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fg.insert(merged_data, wait=True)"
+    "stock_data_clean = stock_data_clean.reset_index() # get index as date column\n",
+    "\n",
+    "stock_data_clean.columns = stock_data_clean.columns.str.lower()\n",
+    "\n",
+    "# Create the feature group for stock opening prices\n",
+    "fg = fs.get_or_create_feature_group(\n",
+    "    name=\"opening_prices\", \n",
+    "    description=\"AAPL opening prices with next-day target\",\n",
+    "    version = 2,\n",
+    "    primary_key = ['date'],\n",
+    "    event_time = 'date'\n",
+    "    )\n",
+    "fg.insert(stock_data_clean, wait=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec268251",
+   "execution_count": 10,
+   "id": "d570b598",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns: ['Date', 'Open', 'High', 'Low', 'Close', 'Volume', 'sentiment_polarity', 'sentiment_neg', 'sentiment_neu', 'sentiment_pos']\n",
-      "Duplicate columns: []\n",
-      "\n",
-      "DataFrame info:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24982 entries, 0 to 24981\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column              Non-Null Count  Dtype         \n",
-      "---  ------              --------------  -----         \n",
-      " 0   Date                24982 non-null  datetime64[ns]\n",
-      " 1   Open                24982 non-null  float64       \n",
-      " 2   High                24982 non-null  float64       \n",
-      " 3   Low                 24982 non-null  float64       \n",
-      " 4   Close               24982 non-null  float64       \n",
-      " 5   Volume              24982 non-null  int64         \n",
-      " 6   sentiment_polarity  24971 non-null  float64       \n",
-      " 7   sentiment_neg       24971 non-null  float64       \n",
-      " 8   sentiment_neu       24971 non-null  float64       \n",
-      " 9   sentiment_pos       24971 non-null  float64       \n",
-      "dtypes: datetime64[ns](1), float64(8), int64(1)\n",
-      "memory usage: 1.9 MB\n"
+      "Index(['date', 'sentiment_polarity', 'sentiment_neg', 'sentiment_neu',\n",
+      "       'sentiment_pos'],\n",
+      "      dtype='object')\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading Dataframe: 100.00% |██████████| Rows 1574/1574 | Elapsed Time: 00:01 | Remaining Time: 00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: sentiments_1_offline_fg_materialization\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/sentiments_1_offline_fg_materialization/executions\n",
+      "2025-12-24 11:58:56,607 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
+      "2025-12-24 11:58:59,796 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-24 12:01:05,415 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
+      "2025-12-24 12:01:05,584 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-24 12:01:14,447 INFO: Execution finished successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Job('sentiments_1_offline_fg_materialization', 'SPARK'), None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check for duplicate columns\n",
-    "print(\"Columns:\", merged_data.columns.tolist())\n",
-    "print(\"Duplicate columns:\", merged_data.columns[merged_data.columns.duplicated()].tolist())\n",
-    "print(\"\\nDataFrame info:\")\n",
-    "merged_data.info()"
+    "sentiment_daily = sentiment_daily.reset_index() # get index as date column\n",
+    "\n",
+    "sentiment_daily.columns = sentiment_daily.columns.str.lower()\n",
+    "\n",
+    "print(sentiment_daily.columns)\n",
+    "\n",
+    "# Create the feature group for stock opening prices\n",
+    "fg = fs.get_or_create_feature_group(\n",
+    "    name=\"sentiments\", \n",
+    "    description=\"AAPL stock sentiments\",\n",
+    "    version = 1,\n",
+    "    primary_key = ['date'],\n",
+    "    event_time = 'date'\n",
+    "    )\n",
+    "fg.insert(sentiment_daily, wait=True)"
    ]
   }
  ],
