Add inference notebook

--- a/notebooks/daily_data.ipynb
+++ b/notebooks/daily_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "2e319d52",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "cded6a11",
    "metadata": {},
    "outputs": [
@@ -24,11 +24,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-24 12:02:28,277 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-12-28 16:37:16,027 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-12-24 12:02:28,284 INFO: Initializing external client\n",
-      "2025-12-24 12:02:28,285 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-12-24 12:02:30,204 INFO: Python Engine initialized.\n",
+      "2025-12-28 16:37:16,032 INFO: Initializing external client\n",
+      "2025-12-28 16:37:16,033 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-12-28 16:37:17,495 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1267871\n",
       "Successfully connected to Feature Store: a1id2223_featurestore\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "8ad73b7a",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "62f59b27",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "60d393fa",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "9d8a78d0",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "5afd0c2b",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-24 12:02:36,189 WARNING: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
+      "2025-12-28 16:37:34,127 WARNING: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
       "\n",
       "FinBERT model moved to MPS device\n"
      ]
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "5c45e42e",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "969e5ec5",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
      "text": [
       "            sentiment_polarity  sentiment_neg  sentiment_neu  sentiment_pos\n",
       "date                                                                       \n",
-      "2025-12-24            0.101701       0.123859       0.650581        0.22556\n"
+      "2025-12-28            0.135682       0.161343       0.541632       0.297025\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4673db99",
    "metadata": {},
    "outputs": [
@@ -297,11 +297,10 @@
       "Launching job: sentiments_1_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
       "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/sentiments_1_offline_fg_materialization/executions\n",
-      "2025-12-24 12:02:52,346 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
-      "2025-12-24 12:02:58,751 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
-      "2025-12-24 12:04:54,644 INFO: Waiting for execution to finish. Current state: SUCCEEDING. Final status: UNDEFINED\n",
-      "2025-12-24 12:04:58,024 INFO: Waiting for log aggregation to finish.\n",
-      "2025-12-24 12:05:06,799 INFO: Execution finished successfully.\n",
+      "2025-12-28 16:38:18,301 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
+      "2025-12-28 16:38:31,050 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: FAILED\n",
+      "2025-12-28 16:38:31,265 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-28 16:41:10,601 ERROR: Execution failed with status: FAILED. See the logs for more information.\n",
       "Inserted daily sentiments into feature store\n"
      ]
     }
@@ -316,7 +315,7 @@
     "    fg = fs.get_or_create_feature_group(\n",
     "        name=\"sentiments\",\n",
     "        description=\"AAPL stock sentiments\",\n",
-    "        version=1,\n",
+    "        version=2,\n",
     "        primary_key=[\"date\"],\n",
     "        event_time=\"date\",\n",
     "    )\n",
@@ -328,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "f2beb4ee",
    "metadata": {},
    "outputs": [
@@ -336,28 +335,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.82s) \n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.37s) \n",
       "Latest sentiment entries:\n",
       "                          date  sentiment_polarity  sentiment_neg  \\\n",
+      "1577 2025-12-28 00:00:00+00:00            0.135682       0.161343   \n",
+      "1576 2025-12-27 00:00:00+00:00            0.222453       0.160476   \n",
       "1575 2025-12-24 00:00:00+00:00            0.101701       0.123859   \n",
       "1574 2025-12-23 00:00:00+00:00            0.298535       0.131626   \n",
       "1325 2024-11-27 00:00:00+00:00            0.000000       0.000000   \n",
-      "1136 2024-11-26 00:00:00+00:00            0.000000       0.000000   \n",
-      "786  2024-11-25 00:00:00+00:00            0.000000       0.000000   \n",
       "\n",
       "      sentiment_neu  sentiment_pos  \n",
-      "1575       0.650581        0.22556  \n",
-      "1574       0.438214        0.43016  \n",
-      "1325       1.000000        0.00000  \n",
-      "1136       1.000000        0.00000  \n",
-      "786        1.000000        0.00000  \n",
+      "1577       0.541632       0.297025  \n",
+      "1576       0.456595       0.382929  \n",
+      "1575       0.650581       0.225560  \n",
+      "1574       0.438214       0.430160  \n",
+      "1325       1.000000       0.000000  \n",
       "\n",
-      "Today's sentiment (2025-12-24):\n",
+      "Today's sentiment (2025-12-28):\n",
       "                          date  sentiment_polarity  sentiment_neg  \\\n",
-      "1575 2025-12-24 00:00:00+00:00            0.101701       0.123859   \n",
+      "1577 2025-12-28 00:00:00+00:00            0.135682       0.161343   \n",
       "\n",
       "      sentiment_neu  sentiment_pos  \n",
-      "1575       0.650581        0.22556  \n"
+      "1577       0.541632       0.297025  \n"
      ]
     }
    ],
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "e9a7e56d",
    "metadata": {},
    "outputs": [],
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "08f92a23",
    "metadata": {},
    "outputs": [
@@ -435,12 +434,10 @@
       "Launching job: opening_prices_2_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
       "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/opening_prices_2_offline_fg_materialization/executions\n",
-      "2025-12-24 12:05:26,497 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
-      "2025-12-24 12:05:29,692 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
-      "2025-12-24 12:05:32,895 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
-      "2025-12-24 12:07:26,825 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
-      "2025-12-24 12:07:27,003 INFO: Waiting for log aggregation to finish.\n",
-      "2025-12-24 12:07:35,717 INFO: Execution finished successfully.\n",
+      "2025-12-28 16:14:08,250 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
+      "2025-12-28 16:14:14,681 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-28 16:15:53,698 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-28 16:16:22,328 INFO: Execution finished successfully.\n",
       "Inserted today's opening price (with target_open NA) into feature store\n"
      ]
     }
