Fix the inference notebook. Adjust versions of my feature groups since there was a mismatch causing errors.
Noticed that the predicted prices are much lower than the actual prices that apple is trading at right now. Might be due to the fact that the historical data it was trained on (i.e. 2016 - 2024) was lower...

--- a/notebooks/backfill.ipynb
+++ b/notebooks/backfill.ipynb
@@ -24,9 +24,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-24 11:55:47,885 INFO: Initializing external client\n",
-      "2025-12-24 11:55:47,886 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-12-24 11:55:49,606 INFO: Python Engine initialized.\n",
+      "2025-12-29 11:34:50,691 INFO: Initializing external client\n",
+      "2025-12-29 11:34:50,692 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-12-29 11:34:52,318 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1267871\n",
       "Successfully connected to Feature Store: a1id2223_featurestore\n",
@@ -97,7 +97,6 @@
     "\n",
     "# Get smallest and highest dates\n",
     "from_date = sentiment_daily['date'].min()\n",
-    "to_date = sentiment_daily['date'].max()\n",
     "# Set index to date for later join\n",
     "sentiment_daily.set_index('date', inplace=True)\n",
     "\n",
@@ -119,7 +118,7 @@
     "\n",
     "stock_data_price_history = stock_data.history(period=\"10y\") # Get 10 yr price history\n",
     "stock_data_clean = stock_data_price_history[['Open']] # 'High', 'Low', 'Close', 'Volume', 'Open'\n",
-    "stock_data_clean = stock_data_clean[from_date:to_date]\n",
+    "stock_data_clean = stock_data_clean[from_date:]\n",
     "\n",
     "# Create next-day target from today's open\n",
     "stock_data_clean[\"target_open\"] = stock_data_clean[\"Open\"].shift(-1)\n",
@@ -143,12 +142,12 @@
       "               '2016-02-29 05:00:00', '2016-03-01 05:00:00',\n",
       "               '2016-03-02 05:00:00', '2016-03-03 05:00:00',\n",
       "               ...\n",
-      "               '2024-11-12 05:00:00', '2024-11-13 05:00:00',\n",
-      "               '2024-11-14 05:00:00', '2024-11-15 05:00:00',\n",
-      "               '2024-11-18 05:00:00', '2024-11-19 05:00:00',\n",
-      "               '2024-11-20 05:00:00', '2024-11-21 05:00:00',\n",
-      "               '2024-11-22 05:00:00', '2024-11-25 05:00:00'],\n",
-      "              dtype='datetime64[ns]', name='Date', length=2208, freq=None)\n"
+      "               '2025-12-11 05:00:00', '2025-12-12 05:00:00',\n",
+      "               '2025-12-15 05:00:00', '2025-12-16 05:00:00',\n",
+      "               '2025-12-17 05:00:00', '2025-12-18 05:00:00',\n",
+      "               '2025-12-19 05:00:00', '2025-12-22 05:00:00',\n",
+      "               '2025-12-23 05:00:00', '2025-12-24 05:00:00'],\n",
+      "              dtype='datetime64[ns]', name='Date', length=2478, freq=None)\n"
      ]
     }
    ],
@@ -226,18 +225,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1267871/fs/1262659/fg/1876360\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 2208/2208 | Elapsed Time: 00:01 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 2478/2478 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -247,10 +238,12 @@
       "Launching job: opening_prices_2_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
       "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/opening_prices_2_offline_fg_materialization/executions\n",
-      "2025-12-24 11:56:16,933 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
-      "2025-12-24 11:56:23,299 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
-      "2025-12-24 11:58:28,068 INFO: Waiting for log aggregation to finish.\n",
-      "2025-12-24 11:58:40,036 INFO: Execution finished successfully.\n"
+      "2025-12-29 11:35:22,042 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
+      "2025-12-29 11:35:34,842 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
+      "2025-12-29 11:35:38,031 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-29 11:37:39,618 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
+      "2025-12-29 11:37:39,795 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-29 11:37:55,140 INFO: Execution finished successfully.\n"
      ]
     },
     {
@@ -299,27 +292,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 1574/1574 | Elapsed Time: 00:01 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 1574/1574 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching job: sentiments_1_offline_fg_materialization\n",
+      "Launching job: sentiments_2_offline_fg_materialization\n",
       "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/sentiments_1_offline_fg_materialization/executions\n",
-      "2025-12-24 11:58:56,607 INFO: Waiting for execution to finish. Current state: INITIALIZING. Final status: UNDEFINED\n",
-      "2025-12-24 11:58:59,796 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
-      "2025-12-24 12:01:05,415 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
-      "2025-12-24 12:01:05,584 INFO: Waiting for log aggregation to finish.\n",
-      "2025-12-24 12:01:14,447 INFO: Execution finished successfully.\n"
+      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/sentiments_2_offline_fg_materialization/executions\n",
+      "2025-12-29 11:38:21,342 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
+      "2025-12-29 11:38:30,911 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-29 11:40:38,372 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
+      "2025-12-29 11:40:38,532 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-29 11:40:47,124 INFO: Execution finished successfully.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Job('sentiments_1_offline_fg_materialization', 'SPARK'), None)"
+       "(Job('sentiments_2_offline_fg_materialization', 'SPARK'), None)"
       ]
      },
      "execution_count": 10,
@@ -338,7 +331,7 @@
     "fg = fs.get_or_create_feature_group(\n",
     "    name=\"sentiments\", \n",
     "    description=\"AAPL stock sentiments\",\n",
-    "    version = 1,\n",
+    "    version = 2,\n",
     "    primary_key = ['date'],\n",
     "    event_time = 'date'\n",
     "    )\n",
